= natour Changelog
Simon Gysi <simon.gysi@gmail.com>

All notable changes to this project will be documented in this file.

The format is based on https://keepachangelog.com/en/1.0.0/[Keep a Changelog^], and this project adheres to https://semver.org/spec/v2.0.0.html[Semantic Versioning^].

IMPORTANT: As per Semantic Versioning, the major version zero is for initial development and anything may change at any time.

== Unreleased

== 0.12.0 - 2023-11-22

=== Added

- Add command line option to use short species names in the AsciiDoc output. The species names are truncated by removing the authority (botany only).

=== Changed

- Do not use shorthand syntax for the breakable option in the AsciiDoc output.

=== Fixed

- Do not abort report creation if species lists are empty (assume default columns for the AsciiDoc output).
- Fix search of public transport stations if distance is missing (e.g. if the coordinates are outside of Switzerland).

== 0.11.0 - 2023-04-15

=== Changed

- Specify files to load for a configuration instead of a file and directories.
- The configuration files must now be named `.natour.yml` (prefixed with a dot).

=== Fixed

- Do not abort creating reports if GPX files do not contain tracks.

== 0.10.0 - 2023-02-18

=== Fixed

- Prevent orphaned section titles and table captions in PDF output.

== 0.9.0 - 2022-10-08

=== Added

- Support colors for GPS tracks, waypoints and routes (`natour map create` command only).

=== Changed

- Omit empty columns of species lists in the AsciiDoc output.

=== Fixed

- Fix inconsistent handling of file errors in the command line interface.
- Fix the creation of map images.

== 0.8.0 - 2022-04-22

=== Added

- Add command to create map images from GPS tracks, waypoints and routes.
- Add command line option to display the version of this gem.

=== Changed

- Rename arguments of `Natour::MapGeoAdmin.save_image`, i.e. `tracks` to `gps_files`, `layers` to `map_layers` and `size` to `image_size`.